# api-builder

./: .gitignore  .travis.yml  LICENSE  README.md  api-builder.cabal  stack.yaml
.circleci/: config.yml
ghcjs-example/: Main.hs
src/: APIBuilder.hs
src/APIBuilder/: API.hs  Builder.hs  Decoding.hs  Error.hs  Query.hs  Routes.hs
src/APIBuilder/Examples/: StackOverflow.hs
src/Network/API/: Builder.hs
src/Network/API/Builder/: API.hs  Builder.hs  Decoding.hs  Error.hs  Query.hs  Receive.hs  Routes.hs  Send.hs
src/Network/API/Builder/Examples/: StackOverflow.hs
src/Network/API/Builder/Send/: Multipart.hs
test-io/Network/API/Builder/Examples/: StackOverflowSpec.hs
test/Network/API/Builder/: ErrorSpec.hs  QuerySpec.hs  RoutesSpec.hs  SendSpec.hs
