name: api-builder
version: 0.7.3.0
synopsis: Library for easily building REST API wrappers in Haskell
license: BSD3
license-file: LICENSE
author: Fraser Murray
maintainer: fraser.m.murray@gmail.com
homepage: https://github.com/intolerable/api-builder
copyright: (c) Fraser Murray 2014
category: Network
build-type: Simple
cabal-version: >= 1.10

source-repository head
  type: git
  location: git://github.com/intolerable/api-builder.git

source-repository this
  type: git
  location: git://github.com/intolerable/api-builder.git
  tag: v0.7.3.0

library
  exposed-modules:
    Network.API.Builder
    Network.API.Builder.API
    Network.API.Builder.Builder
    Network.API.Builder.Error
    Network.API.Builder.Examples.StackOverflow
    Network.API.Builder.Query
    Network.API.Builder.Receive
    Network.API.Builder.Routes
    Network.API.Builder.Send
    Network.API.Builder.Send.Multipart
  build-depends:
    base >= 4.6 && < 4.9,
    aeson >= 0.7 && < 0.9,
    attoparsec >= 0.11 && < 0.13,
    bifunctors == 4.*,
    bytestring == 0.10.*,
    either == 4.*,
    HTTP == 4000.*,
    http-client == 0.4.7.* || == 0.4.11.*,
    http-conduit == 2.*,
    http-types == 0.8.*,
    text == 1.*,
    transformers >= 0.3 && < 0.5
  hs-source-dirs: src/
  default-language: Haskell2010
  default-extensions:
    FlexibleInstances
    OverloadedStrings
  ghc-options: -Wall

test-suite test
  hs-source-dirs: test
  main-is: Spec.hs
  default-extensions:
    OverloadedStrings
    ScopedTypeVariables
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  build-depends:
    base == 4.*,
    Cabal >= 1.16.0,
    api-builder,
    aeson,
    bytestring,
    hspec,
    http-conduit,
    text,
    transformers
  GHC-options: -Wall

test-suite test-io
  hs-source-dirs: test-io
  main-is: Spec.hs
  default-extensions:
    LambdaCase
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  build-depends:
    base == 4.*,
    Cabal >= 1.16.0,
    api-builder,
    aeson,
    bytestring,
    containers,
    hspec,
    text,
    transformers
  GHC-options: -Wall
