name:           api-builder
version:        0.17.0.0
synopsis:       Library for easily building REST API wrappers in Haskell
category:       Network
homepage:       https://github.com/intolerable/api-builder
author:         Fraser Murray
maintainer:     fraser.m.murray@gmail.com
copyright:      (c) Fraser Murray 2014
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: git://github.com/intolerable/api-builder.git

library
  hs-source-dirs: src/
  default-extensions:
    OverloadedStrings
    FlexibleInstances
  ghc-options: -Wall
  build-depends:
    HTTP >=4000,
    aeson >=0.9,
    base >=4.6,
    bifunctors >=4.0,
    bytestring >=0.10,
    http-client >=0.4.30,
    http-client-tls >=0.2,
    http-types >=0.8,
    text >=1.0,
    tls >=1.3,
    transformers >=0.4
  exposed-modules:
      Network.API.Builder
      Network.API.Builder.API
      Network.API.Builder.Builder
      Network.API.Builder.Error
      Network.API.Builder.Examples.StackOverflow
      Network.API.Builder.Query
      Network.API.Builder.Receive
      Network.API.Builder.Routes
      Network.API.Builder.Send
      Network.API.Builder.Send.Multipart
  other-modules:
      Paths_api_builder
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test/
  default-extensions: OverloadedStrings FlexibleInstances ScopedTypeVariables
  ghc-options: -Wall
  build-depends:
    Cabal >=1.16.0,
    aeson,
    api-builder,
    base ==4.*,
    bytestring,
    hspec,
    http-client,
    QuickCheck,
    text,
    transformers
  other-modules:
    Network.API.Builder.ErrorSpec
    Network.API.Builder.QuerySpec
    Network.API.Builder.RoutesSpec
    Network.API.Builder.SendSpec
    Paths_api_builder
  default-language: Haskell2010

test-suite test-io
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test-io/
  default-extensions: OverloadedStrings FlexibleInstances LambdaCase
  ghc-options: -Wall
  build-depends:
      Cabal >=1.16.0
    , aeson
    , api-builder
    , base ==4.*
    , bytestring
    , containers
    , hspec
    , text
    , transformers
  other-modules:
    Network.API.Builder.Examples.StackOverflowSpec
    Paths_api_builder
  default-language: Haskell2010
